--- a/Styles/styleCuerpo.css
+++ b/Styles/styleCuerpo.css
@@ -79,7 +79,7 @@ nav ul li {
 
 /* Estilo para la sección del banner */
 .banner-cabecera {
-    background-image: url('assets/imagenes/banner.jpg'); /* Ruta de la imagen de fondo */
+    background-image: url("../IMG/banner.jpg"); /* Ruta de la imagen de fondo */
     background-size: cover;
     background-position: center;
     height: 400px; /* Altura deseada */
