--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,7 +1,13 @@
+*{
+    font-family: 'Roboto', sans-serif;
+}
+body{
+    background-color: #333;
+}
 header{
-    background-color: blue;
+    background-color: #333;
     height: 5vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
 }
@@ -21,35 +27,79 @@ footer{
 }
 /*Estilos Logo de la pagina*/
 .logoCont{
-    background-color: blueviolet;
     width: 40%;
 }
 .logoCont img{
-    width: 15%;
+    width: auto;
     height: 100%;
 }
 /*Estilos de la barra de navegacion*/
 .navCont{
-    background-color: chocolate;
-    width: 50%;
+    width: 40%;
 }
 
 .navCont nav ul{
     display: flex;
+    justify-content: space-evenly;
     gap: 1.5rem;
 }
 .navCont nav ul li{
     list-style: none;
 }
+.navCont nav ul li a:hover{
+    text-decoration: underline;
+}
 .navCont nav ul li a{
     text-decoration: none;
+    color: aliceblue;
 }
 
 /*Estilos del Slider*/
 #sliderCont{
-    height: 65vh;
-    background-color: #337397;
+    height: 90vh;
+    overflow: hidden;
 }
+.sliderInner{
+    display: flex;
+    transition: all 0.3s ease-in;
+    flex-direction: row;
+    flex-wrap: nowrap;
+   
+}
+.sliderInner img{
+    aspect-ratio: 16/9;
+    width: 100%;
+    height: auto;
+}
+/*Estilos de las flechas del slider*/
+.arrowIcon{
+    position: absolute;
+    bottom: 15%;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.arrowIcon i:hover{
+    transform: scale(1.3, 1.3);
+    transition: all 0.3s ease-out;
+    cursor: pointer;
+}
+
+.arrowIcon i{
+    font-size: 48px;
+    color: aliceblue;
+    background-color: hsl(0, 0%, 20%, 40%);
+    padding: 24px;
+    border-radius: 25px;
+}
+.arrowIcon :first-child{
+    margin-left: 15px;
+}
+.arrowIcon :last-child{
+    margin-right: 15px;
+}
+
+
 #sobreNosotros{
     background-color: #8E3AB6;
 }
