--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,7 +2,7 @@
     font-family: 'Roboto', sans-serif;
 }
 body{
-    background-color: #333;
+    background-color: #0A0B0B;
 }
 header{
     background-color: #333;
@@ -99,9 +99,35 @@ footer{
     margin-right: 15px;
 }
 
-
+/*Estilos seccion sobre nosotros*/
 #sobreNosotros{
-    background-color: #8E3AB6;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.aboutTxt{
+    width: 50%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+.aboutTxt h2{
+    color: #FCDB59;
+    font-weight: bold;
+    margin: 0;
+    font-size: 4rem
+}
+.aboutTxt p{
+    color: aliceblue;
+    text-align: center;
+    font-size: 1.2rem;
+}
+#sobreNosotros img{
+    height: 70%;
+    width: 45%;
+    object-fit: cover;
 }
 
 #nuestrosJuegos{
