--- a/Styles/style.css
+++ b/Styles/style.css
@@ -22,7 +22,7 @@ footer{
     margin-top: 50px;
 }
 .sectionCont{
- height: 700px;
+ height: 900px;
  margin-top: 50px;
 }
 /*Estilos Logo de la pagina*/
@@ -129,12 +129,47 @@ footer{
     width: 45%;
     object-fit: cover;
 }
-
+/*Estilos seccion nuestos juegos/franquicias*/
 #nuestrosJuegos{
-    background-color: #3AB6B6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.juegosTitle h2{
+    color: aliceblue;
+    font-weight: bold;
+    font-size: 4rem
+}
+
+.gridCont{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 300px);
+    height: 90%;
+    align-items: center;
+    justify-items: center;
+}
+
+.gridItem{
+    width: 90%;
+    height: 90%;
+    object-fit: cover;
+    background-color: hsl(208,100%,97.06%, 90%);
+    border-radius: 24px;
+}
+.item4{
+    grid-column: 1/4;
+    width: 96%;
+}
+.item5{
+    grid-row: 3;
+}
+.item6{
+    grid-row: 3;
+}
 #carreras{
+    margin-top: 300px;
     background-color: #9DB63A;
 }
 
