--- a/Styles/style.css
+++ b/Styles/style.css
@@ -18,8 +18,10 @@ section{
 }
 footer{
     height: 600px;
-    background-color: #B6763A;
     margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 .sectionCont{
  height: 900px;
@@ -99,7 +101,7 @@ footer{
     margin-right: 15px;
 }
 
-/*Estilos seccion sobre nosotros*/
+/*Estilos seccion sobre nosotros y carreras*/
 #sobreNosotros{
     display: flex;
     align-items: center;
@@ -129,6 +131,28 @@ footer{
     width: 45%;
     object-fit: cover;
 }
+
+#carreras{
+    margin-top: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#carreras img{
+    height: 70%;
+    width: 45%;
+    object-fit: cover;
+}
+
+.aboutTxt a{
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 2rem;
+    box-shadow:  1px 1px 1px 1px aliceblue;
+}
+.aboutTxt a:hover{
+    box-shadow: inset 1px 1px 1px 1px aliceblue;
+}
 /*Estilos seccion nuestos juegos/franquicias*/
 #nuestrosJuegos{
     display: flex;
@@ -155,21 +179,50 @@ footer{
     width: 90%;
     height: 90%;
     object-fit: cover;
-    background-color: hsl(208,100%,97.06%, 90%);
     border-radius: 24px;
 }
+.item1{
+    background-color: aliceblue;
+}
+.item2{
+    /*background-image: radial-gradient(ellipse farthest-corner at 50% 50%, rgba(50, 50, 50, 0.8), rgba(80, 80, 80, 0.2));*/
+    background-color: #ffe316;
+}
+.item3{
+    background-color: aliceblue;
+}
+
 .item4{
+    background-color: #0A0B0B;
     grid-column: 1/4;
     width: 96%;
 }
 .item5{
+    background-color: aliceblue;
     grid-row: 3;
 }
 .item6{
+    background-color: #e0f2f9;
     grid-row: 3;
 }
-#carreras{
-    margin-top: 300px;
-    background-color: #9DB63A;
+
+/*Estilos del footer*/
+
+.contact-us{
+    width: 50%;
+    height: 70%;
 }
 
+
+.connect-with-us{
+    width: 40%;
+    height: 40%;
+    display: flex;
+    align-items: self-end;
+    justify-content: end;
+}
+
+.contact-cont h2{
+    font-size: 2rem;
+    color: aliceblue;
+}
