--- a/Styles/styleCuerpo.css
+++ b/Styles/styleCuerpo.css
@@ -57,6 +57,29 @@ nav ul li {
     padding: auto ;
     border-radius: 5px;
 }
+.game_1 {
+    margin: 20px;
+    position: relative;
+    width: 500px;
+}
+
+.game_1 img {
+    max-width: 620px;
+    padding: auto ;
+    border-radius: 5px;
+}
+.game_2 {
+    margin: 20px;
+    position: relative;
+    width: 1800px;
+    margin-left: 115px;
+}
+
+.game_2 img {
+    max-width: 1800px;
+    padding: auto ;
+    border-radius: 5px;
+}
 
 .game .description {
     display: none;
@@ -80,6 +103,19 @@ nav ul li {
 /* Estilo para la sección del banner */
 .banner-cabecera {
     background-image: url("../IMG/banner.jpg"); /* Ruta de la imagen de fondo */
+    background-size: cover;
+    background-position: center;
+    height: 400px; /* Altura deseada */
+    color: #fff; /* Color del texto */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative; /* Agrega posición relativa para posicionar el contenido interno */
+}
+
+.banner-cabecera_2 {
+    background-image: url("../IMG/banner_2.jpg"); /* Ruta de la imagen de fondo */
     background-size: cover;
     background-position: center;
     height: 400px; /* Altura deseada */
