--- a/Styles/styleCuerpo.css
+++ b/Styles/styleCuerpo.css
@@ -130,17 +130,17 @@ header{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%; /* Ancho al 100% del contenedor padre */
-    height: 100%; /* Altura al 100% del contenedor padre */
+    width: 100%; 
+    height: 100%;
     z-index: auto; /* Detrás del contenido */
-    border-radius: inherit; /* Utiliza el mismo borde redondeado que el contenedor padre */
+    border-radius: inherit; 
 }
 
 /* Estilo para el contenido dentro de la sección */
 .contenido {
     position: relative; /* Agrega posición relativa para posicionar el contenido interno */
     z-index: auto; /* Encima del fondo semitransparente */
-    background-color: transparent; /* Fondo transparente */
+    background-color: transparent;
     padding: 20px;
     border-radius: 10px;
 }
